// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NoteController (e2e) > GET /latest 1`] = `
{
  "data": {
    "allow_comment": true,
    "bookmark": false,
    "comments_index": 0,
    "count": {
      "like": 0,
      "read": 0,
    },
    "created": "2021-03-20T00:00:00.000Z",
    "images": [],
    "is_published": true,
    "modified": null,
    "nid": 20,
    "text": "Content 20",
    "title": "Note 20",
    "topic": null,
  },
  "next": {
    "nid": 19,
  },
}
`;

exports[`NoteController (e2e) > GET /list/:id 1`] = `
{
  "data": [
    {
      "created": "2023-01-17T11:01:57.851Z",
      "nid": 21,
      "title": "Note 2 (updated)",
    },
    {
      "created": "2021-03-20T00:00:00.000Z",
      "nid": 20,
      "title": "Note 20",
    },
    {
      "created": "2021-03-19T00:00:00.000Z",
      "nid": 19,
      "title": "Note 19",
    },
    {
      "created": "2021-03-18T00:00:00.000Z",
      "nid": 18,
      "title": "Note 18",
    },
    {
      "created": "2021-03-17T00:00:00.000Z",
      "nid": 17,
      "title": "Note 17",
    },
  ],
  "size": 5,
}
`;

exports[`NoteController (e2e) > GET /notes 1`] = `
{
  "data": [
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-20T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 20,
      "text": "Content 20",
      "title": "Note 20",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-19T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 19,
      "text": "Content 19",
      "title": "Note 19",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-18T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 18,
      "text": "Content 18",
      "title": "Note 18",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-17T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 17,
      "text": "Content 17",
      "title": "Note 17",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-16T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 16,
      "text": "Content 16",
      "title": "Note 16",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-15T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 15,
      "text": "Content 15",
      "title": "Note 15",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-14T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 14,
      "text": "Content 14",
      "title": "Note 14",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-13T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 13,
      "text": "Content 13",
      "title": "Note 13",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-12T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 12,
      "text": "Content 12",
      "title": "Note 12",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-11T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 11,
      "text": "Content 11",
      "title": "Note 11",
      "topic": null,
    },
  ],
  "pagination": {
    "current_page": 1,
    "has_next_page": true,
    "has_prev_page": false,
    "size": 10,
    "total": 20,
    "total_page": 2,
  },
}
`;

exports[`NoteController (e2e) > GET /notes/nid/:nid 1`] = `
{
  "data": {
    "allow_comment": true,
    "bookmark": false,
    "comments_index": 0,
    "count": {
      "like": 0,
      "read": 0,
    },
    "created": "2023-01-17T11:01:57.851Z",
    "images": [],
    "is_published": true,
    "liked": true,
    "modified": null,
    "mood": "happy",
    "nid": 21,
    "text": "Content 2 (updated)",
    "title": "Note 2 (updated)",
    "topic": null,
    "weather": "sunny",
  },
  "next": {
    "created": "2021-03-20T00:00:00.000Z",
    "modified": null,
    "nid": 20,
    "title": "Note 20",
  },
  "prev": null,
}
`;

exports[`NoteController (e2e) > Get patched note 1`] = `
{
  "allow_comment": true,
  "bookmark": false,
  "comments_index": 0,
  "count": {
    "like": 0,
    "read": 0,
  },
  "created": "2023-01-17T11:01:57.851Z",
  "images": [],
  "is_published": true,
  "modified": null,
  "mood": "happy",
  "nid": 21,
  "text": "Content 2 (updated)",
  "title": "Note 2 (updated)",
  "weather": "sunny",
}
`;

exports[`NoteController (e2e) > POST /notes 1`] = `
{
  "allow_comment": true,
  "bookmark": false,
  "comments_index": 0,
  "count": {
    "like": 0,
    "read": 0,
  },
  "created": "2023-01-17T11:01:57.851Z",
  "images": [],
  "is_published": true,
  "meta": null,
  "modified": null,
  "nid": 21,
  "text": "Content 2",
  "title": "Note 2",
  "topic": null,
}
`;
